comic/online_book_reader.css
/* CSS crunched with Crunch - http://crunchapp.net/ */
.fullscreen-toggle {
  position: fixed;
  top: 5px;
  right: 5px;
  z-index: 1020;
}
.small-screen .fullscreen-toggle,
.show-chapters .fullscreen-toggle {
  display: none;
}
.show-navigation .fullscreen-toggle-exit {
  display: none;
}
.hide-navigation .fullscreen-toggle-enter {
  display: none;
}
.header-nav {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
  white-space: nowrap;
}
.header-nav:before,
.header-nav:after {
  display: table;
  content: " ";
}
.header-nav li {
  float: left;
  position: relative;
  display: block;
  width: 25%;
  height: 20px;
}
.first-page .header-nav-previous,
.last-page .header-nav-next {
  cursor: default;
  opacity: 0.3;
}
.small-screen .header,
.small-screen .footer {
  position: fixed;
  right: 0;
  left: 0;
  height: 50px;
  line-height: 50px;
  text-align: center;
  z-index: 1010;
  background-color: #fafafa;
  -webkit-transition: top 300ms, bottom 300ms;
  transition: top 300ms, bottom 300ms;
}
.small-screen .header {
  border-bottom: 1px solid #e5e5e5;
  top: 0;
}
.small-screen .footer {
  border-top: 1px solid #e5e5e5;
  bottom: 0;
}
.small-screen.hide-navigation .header {
  top: -50px;
}
.small-screen.hide-navigation .footer {
  bottom: -50px;
}
.small-screen .header-brand {
  display: none;
}
.small-screen a.header-nav-home-large {
  display: none;
}
.large-screen .header,
.large-screen .footer {
  text-align: center;
  margin: 0 auto;
  overflow: hidden;
}
.large-screen.hide-navigation .header {
  display: none;
}
.large-screen .header-nav-home,
.large-screen .header-nav-next {
  text-align: left;
}
.large-screen .header-nav-previous,
.large-screen .header-nav-chapters {
  text-align: right;
}
.large-screen .header-nav {
  padding-left: 10px;
  padding-right: 10px;
}
.large-screen .header-nav li {
  padding: 0 15px;
}
.large-screen .header-nav-home-small {
  display: none;
}
.header-brand {
  white-space: nowrap;
}
a.header-nav-chapters-hide {
  display: none;
}
.show-chapters a.header-nav-chapters-show,
.show-chapters a.header-nav-previous,
.show-chapters a.header-nav-next {
  display: none;
}
.show-chapters a.header-nav-chapters-hide {
  display: inline;
}
#swiper {
  position: relative;
  overflow: hidden;
  /* height: is set in JavaScript. */
}
.page-container {
  position: relative;
  height: 100%;
  width: 100%;
  /* The pages. */
  /* Loading icon for pages */
}
.page-container > div {
  position: absolute;
  height: 100%;
  width: 100%;
  text-align: center;
}
.page-container > div img {
  max-width: 100%;
  max-height: 100%;
  z-index: 910;
}
.page-container .spinner {
  position: absolute;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 2em;
  height: 2em;
  z-index: 900;
}
.page-container .loaded .spinner {
  display: none;
}
.navpanel-container {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 1000;
  /* width: is set in JavaScript */
}
.small-screen .navpanel-container {
  display: none;
}
.navpanel-previous-container {
  left: 0;
  text-align: right;
}
.navpanel-next-container {
  right: 0;
}
.first-page .navpanel-previous,
.last-page .navpanel-next {
  cursor: default;
}
.first-page .navpanel-previous a,
.last-page .navpanel-next a {
  cursor: default;
  opacity: 0.3;
}
.navpanel {
  display: table;
  height: 100%;
  width: 100%;
  cursor: pointer;
  padding: 0 5px;
}
.navpanel a {
  display: table-cell;
  vertical-align: middle;
  font-size: 3em;
}
.table {
  width: 100%;
  margin-bottom: 20px;
  max-width: 100%;
  background-color: transparent;
  border-collapse: collapse;
  border-spacing: 0;
}
.table tbody > tr > td {
  padding: 8px;
  line-height: 1.428571429;
  vertical-align: top;
  border-top: 1px solid #dddddd;
}
.table tbody > tr:hover > td {
  background-color: #f5f5f5;
}
.chapter-overview {
  margin: 0 auto;
  text-align: center;
  display: none;
  padding-bottom: 50px;
}
.show-chapters .chapter-overview {
  display: block;
}
.small-screen .chapter-overview {
  padding-top: 50px;
}
.chapter-overview .chapter-image {
  text-align: left;
}
.chapter-overview .chapter-description {
  text-align: left;
  width: 100%;
}
.chapter-overview table tr {
  cursor: pointer;
}
body.show-chapters {
  overflow: auto;
}
.show-chapters #swiper,
.show-chapters .footer {
  display: none;
}
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
html,
body {
  height: 100%;
}
body {
  overflow-x: hidden;
  width: 100%;
  margin: 0;
  font-size: 14px;
  line-height: 1.428571429;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
h1,
h2,
h3 {
  font-weight: 500;
  line-height: 1.1;
  color: inherit;
  margin-top: 20px;
  margin-bottom: 10px;
}
h1 {
  font-size: 36px;
}
h2 {
  font-size: 30px;
}
h3 {
  font-size: 24px;
}
a {
  color: #333333;
  text-decoration: none;
  background: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
a:hover,
a:focus {
  text-decoration: none;
  outline: 0;
}
a:active {
  opacity: 0.3;
}
img {
  border: 0;
}
#root-container {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  /* max-width: is set in JavaScript. */
  /* height: is set in JavaScript. */
}
.fouc #root-container {
  display: none;
}
.fouc-loader {
  display: none;
  margin-top: 30px;
  position: absolute;
  width: 100%;
  text-align: center;
}
.fouc-loader .spinner {
  display: inline-block;
}
.fouc .fouc-loader {
  display: block;
}

